--- a/index.html
+++ b/index.html
@@ -3,16 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Student Submission</title>
+  <title>Student Submission Form</title>
 </head>
 <body>
   <h2>Student Submission Form</h2>
-  <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
-    <label for="name">Name:</label><br>
-    <input type="text" id="name" name="name" required><br><br>
+  <form action="https://formspree.io/f/xyznbrvg" method="POST">
+    <label for="firstName">First Name:</label><br>
+    <input type="text" id="firstName" name="firstName" required><br><br>
+
+    <label for="lastName">Last Name:</label><br>
+    <input type="text" id="lastName" name="lastName" required><br><br>
 
     <label for="studentID">Student ID:</label><br>
     <input type="text" id="studentID" name="studentID" required><br><br>
+
+    <label for="email">Email:</label><br>
+    <input type="email" id="email" name="email" required><br><br>
 
     <button type="submit">Submit</button>
   </form>
