--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Student Submission Form</title>
+<title>Student Access Form</title>
 <style>
   body {
     font-family: Arial, sans-serif;
@@ -49,11 +49,9 @@
 </head>
 <body>
 <form action="https://formspree.io/f/xyznbrvg" method="POST">
-  <h2>Student Submission Form</h2>
-  <input type="text" name="firstName" placeholder="First Name" required>
-  <input type="text" name="lastName" placeholder="Last Name" required>
-  <input type="text" name="studentID" placeholder="Student ID" required>
-  <input type="email" name="email" placeholder="Email" required>
+  <h2>Student Access Form</h2>
+  <input type="text" name="username" placeholder="Username" required>
+  <input type="text" name="studentCode" placeholder="Student ID / Access Code" required>
   <button type="submit">Submit</button>
 </form>
 </body>
