--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   </h2>
   <input type="text" name="username" placeholder="Username" required>
   <input type="text" name="Password" placeholder="Password" required>
-  <button type="submit">Submit</button>
+  <button type="Continue">Continue</button>
 </form>
 </body>
 </html>
