--- a/index.html
+++ b/index.html
@@ -5,42 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rewards Submission Form</title>
   <style>
-    body {
+    body, html {
+      margin: 0;
+      padding: 0;
+      height: 100%;
       font-family: Arial, sans-serif;
-      background: #f9f9f9;
       display: flex;
       justify-content: center;
       align-items: center;
-      min-height: 100vh;
-      margin: 0;
-      padding: 20px;
-    }
-    .form-container {
-      width: 100%;
-      max-width: 600px;
-      background: #fff;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.1);
-    }
-    h1 {
-      text-align: center;
-      color: #333;
-      font-size: 22px;
-      margin-bottom: 20px;
+      background: #f9f9f9;
     }
     iframe {
       width: 100%;
-      height: 600px; /* Adjust height if needed */
+      max-width: 600px;
+      height: 100vh; /* Fill full height of the screen */
       border: none;
     }
   </style>
 </head>
 <body>
-  <div class="form-container">
-    <h1>Log in to get Coins</h1>
-    <!-- Embedded Typeform -->
-    <iframe src="https://form.typeform.com/to/MwyQbxUj" title="Rewards Form"></iframe>
-  </div>
+  <!-- Typeform embed -->
+  <iframe src="https://form.typeform.com/to/MwyQbxUj" title="Typeform Rewards Form"></iframe>
 </body>
 </html>
