--- a/index.html
+++ b/index.html
@@ -1,30 +1,145 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rewards Submission Form</title>
-  <style>
-    body, html {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      font-family: Arial, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background: #f9f9f9;
-    }
-    iframe {
-      width: 100%;
-      max-width: 600px;
-      height: 100vh; /* Fill full height of the screen */
-      border: none;
-    }
-  </style>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Three-section page with red divider</title>
+<style>
+  /* Reset & base */
+  * { box-sizing: border-box; margin: 0; padding: 0; }
+  html,body { height: 100%; scroll-behavior: smooth; font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; }
+
+  /* Each "section" fills the viewport */
+  section {
+    min-height: 100vh;
+    display: grid;
+    place-items: center;
+    font-size: 2rem;
+    color: #222;
+  }
+
+  /* Distinguish sections visually (optional) */
+  #section1 { background: #fff; }
+  #section2 { background: #f7f7f7; }
+  #section3 { background: #fff; }
+
+  /* Fixed T-shaped divider (red) */
+  .divider-horizontal {
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 50%;                 /* middle of the page */
+    height: 12px;             /* thickness of the horizontal bar */
+    background: #ff0000;      /* red color for the line (you asked for red) */
+    transform: translateY(-50%);
+    z-index: 999;
+  }
+
+  .divider-vertical {
+    position: fixed;
+    left: 50%;                /* centered horizontally */
+    top: 0;                   /* starts at top */
+    bottom: 50%;              /* ends at middle (where horizontal bar is) */
+    width: 12px;              /* thickness of the vertical bar */
+    background: #ff0000;      /* same red */
+    transform: translateX(-50%);
+    z-index: 999;
+  }
+
+  /* Optional thin center notch so vertical meets horizontal smoothly */
+  .divider-connector {
+    position: fixed;
+    left: 50%;
+    top: calc(50% - 6px); /* place connector overlapping the horizontal bar */
+    width: 24px;
+    height: 24px;
+    transform: translateX(-50%);
+    pointer-events: none;
+    z-index: 1000;
+    border-radius: 2px;
+    background: transparent; /* you can remove or style if you want a small knot */
+  }
+
+  /* Small navigation UI (top-left) */
+  .nav {
+    position: fixed;
+    left: 12px;
+    top: 12px;
+    z-index: 1100;
+    display: flex;
+    gap: 8px;
+    background: rgba(255,255,255,0.85);
+    padding: 8px;
+    border-radius: 8px;
+    box-shadow: 0 6px 18px rgba(0,0,0,0.08);
+  }
+  .nav a {
+    text-decoration: none;
+    padding: 6px 10px;
+    border-radius: 6px;
+    color: #b00;
+    border: 1px solid rgba(200,0,0,0.12);
+    font-weight: 600;
+    font-size: 0.9rem;
+  }
+  .nav a:hover { background: rgba(255,0,0,0.06); }
+
+  /* Make sure content doesn't hide behind system top bars on some phones */
+  .content-box { max-width: 900px; padding: 28px; text-align: center; }
+
+  /* Visual cue where the T intersects (optional) */
+  .center-label {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    pointer-events: none;
+    font-size: 0.85rem;
+    color: rgba(0,0,0,0.35);
+  }
+
+  /* Responsive: thinner bars on small screens */
+  @media (max-width: 420px) {
+    .divider-horizontal { height: 8px; }
+    .divider-vertical   { width: 8px; }
+  }
+</style>
 </head>
 <body>
-  <!-- Typeform embed -->
-  <iframe src="https://form.typeform.com/to/MwyQbxUj" title="Typeform Rewards Form"></iframe>
+
+  <!-- Fixed red divider shapes -->
+  <div class="divider-horizontal" aria-hidden="true"></div>
+  <div class="divider-vertical" aria-hidden="true"></div>
+  <div class="divider-connector" aria-hidden="true"></div>
+
+  <!-- Simple nav to test deep links -->
+  <nav class="nav" aria-label="Section links">
+    <a href="#section1">Top</a>
+    <a href="#section2">Middle</a>
+    <a href="#section3">Bottom</a>
+  </nav>
+
+  <!-- Three page sections (deep-link targets) -->
+  <section id="section1">
+    <div class="content-box">
+      <h1>Section 1 — Top</h1>
+      <p>Deep link: <code>#section1</code></p>
+    </div>
+  </section>
+
+  <section id="section2">
+    <div class="content-box">
+      <h1>Section 2 — Middle</h1>
+      <p>Deep link: <code>#section2</code></p>
+    </div>
+  </section>
+
+  <section id="section3">
+    <div class="content-box">
+      <h1>Section 3 — Bottom</h1>
+      <p>Deep link: <code>#section3</code></p>
+    </div>
+  </section>
+
 </body>
 </html>
