--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
     object-fit: contain;
   }
 
-  /* Positions */
+  /* Updated positions */
   .logo-left-top {
-    top: 40%;
+    top: 10%;   /* moved higher */
     left: 18%;
   }
 
   .logo-right-top {
-    top: 40%;
+    top: 10%;   /* moved higher */
     right: 18%;
   }
 
@@ -80,8 +80,8 @@
       height: 70px;
     }
 
-    .logo-left-top { top: 45%; left: 10%; }
-    .logo-right-top { top: 45%; right: 10%; }
+    .logo-left-top { top: 12%; left: 10%; }
+    .logo-right-top { top: 12%; right: 10%; }
     .logo-bottom-left { bottom: 15%; left: 10%; }
   }
 </style>
@@ -92,7 +92,7 @@
   <div class="divider-horizontal"></div>
   <div class="divider-vertical"></div>
 
-  <!-- Logo Boxes (Replace image sources with your actual logo files) -->
+  <!-- Logo Boxes -->
   <div class="logo-box logo-left-top">
     <img src="logo1.png" alt="LegalTenderPay Left Logo">
   </div>
