--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   :root {
     --metallic-silver: #9ea0a3;
+    --red: #ff0000;
   }
 
   /* Divider lines */
@@ -56,12 +57,12 @@
 
   /* Updated positions */
   .logo-left-top {
-    top: 10%;   /* moved higher */
+    top: 10%;
     left: 18%;
   }
 
   .logo-right-top {
-    top: 10%;   /* moved higher */
+    top: 10%;
     right: 18%;
   }
 
@@ -70,19 +71,59 @@
     left: 18%;
   }
 
+  /* Buttons */
+  .button {
+    position: fixed;
+    background: var(--red);
+    color: #fff;
+    border: none;
+    border-radius: 8px;
+    padding: 10px 18px;
+    font-size: 1rem;
+    font-weight: 600;
+    cursor: pointer;
+    transition: 0.3s ease;
+    box-shadow: 0 4px 10px rgba(255, 0, 0, 0.2);
+    text-decoration: none;
+  }
+
+  .button:hover {
+    background: #cc0000;
+    box-shadow: 0 6px 14px rgba(255, 0, 0, 0.3);
+  }
+
+  /* Button positions */
+  .btn-tiktok {
+    top: 25%;   /* below left logo */
+    left: 17%;
+  }
+
+  .btn-btc-site {
+    top: 25%;   /* below right logo */
+    right: 15%;
+  }
+
+  .btn-btc-getpaid {
+    top: 32%;   /* below the BTC Site button */
+    right: 13%;
+  }
+
   /* Responsive adjustments */
   @media (max-width: 420px) {
     .divider-horizontal { height: 6px; }
     .divider-vertical { width: 6px; }
 
-    .logo-box {
-      width: 70px;
-      height: 70px;
-    }
+    .logo-box { width: 70px; height: 70px; }
 
     .logo-left-top { top: 12%; left: 10%; }
     .logo-right-top { top: 12%; right: 10%; }
     .logo-bottom-left { bottom: 15%; left: 10%; }
+
+    .button { font-size: 0.8rem; padding: 8px 12px; }
+
+    .btn-tiktok { top: 27%; left: 8%; }
+    .btn-btc-site { top: 27%; right: 7%; }
+    .btn-btc-getpaid { top: 34%; right: 6%; }
   }
 </style>
 </head>
@@ -104,6 +145,11 @@
   <div class="logo-box logo-bottom-left">
     <img src="logo3.png" alt="LegalTenderPay Bottom Left Logo">
   </div>
+
+  <!-- Buttons -->
+  <a href="#" class="button btn-tiktok">Purchase TikTok Coin</a>
+  <a href="#" class="button btn-btc-site">Purchase BTC to Site</a>
+  <a href="#" class="button btn-btc-getpaid">Purchase BTC & Get Paid in #</a>
 
 </body>
 </html>
