--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     object-fit: contain;
   }
 
-  /* Updated positions */
+  /* Positions */
   .logo-left-top {
     top: 10%;
     left: 18%;
@@ -71,41 +71,37 @@
     left: 18%;
   }
 
-  /* Buttons */
+  /* Buttons with metallic border + glow */
   .button {
     position: fixed;
-    background: var(--red);
+    background: linear-gradient(180deg, #ff3333, #cc0000);
     color: #fff;
-    border: none;
-    border-radius: 8px;
-    padding: 10px 18px;
+    border: 2px solid var(--metallic-silver);
+    border-radius: 10px;
+    padding: 10px 20px;
     font-size: 1rem;
     font-weight: 600;
     cursor: pointer;
-    transition: 0.3s ease;
-    box-shadow: 0 4px 10px rgba(255, 0, 0, 0.2);
     text-decoration: none;
+    transition: all 0.3s ease;
+    box-shadow: 0 4px 15px rgba(255, 0, 0, 0.25), 0 0 8px rgba(158,160,163,0.4);
   }
 
   .button:hover {
-    background: #cc0000;
-    box-shadow: 0 6px 14px rgba(255, 0, 0, 0.3);
+    background: linear-gradient(180deg, #ff5555, #bb0000);
+    box-shadow: 0 6px 18px rgba(255,0,0,0.35), 0 0 10px rgba(158,160,163,0.6);
+    transform: translateY(-2px);
   }
 
   /* Button positions */
   .btn-tiktok {
-    top: 25%;   /* below left logo */
-    left: 17%;
+    top: 25%;
+    left: 15%;
   }
 
-  .btn-btc-site {
-    top: 25%;   /* below right logo */
+  .btn-bitcoin {
+    top: 25%;
     right: 15%;
-  }
-
-  .btn-btc-getpaid {
-    top: 32%;   /* below the BTC Site button */
-    right: 13%;
   }
 
   /* Responsive adjustments */
@@ -119,11 +115,14 @@
     .logo-right-top { top: 12%; right: 10%; }
     .logo-bottom-left { bottom: 15%; left: 10%; }
 
-    .button { font-size: 0.8rem; padding: 8px 12px; }
+    .button {
+      font-size: 0.8rem;
+      padding: 8px 14px;
+      border-radius: 8px;
+    }
 
     .btn-tiktok { top: 27%; left: 8%; }
-    .btn-btc-site { top: 27%; right: 7%; }
-    .btn-btc-getpaid { top: 34%; right: 6%; }
+    .btn-bitcoin { top: 27%; right: 8%; }
   }
 </style>
 </head>
@@ -148,8 +147,7 @@
 
   <!-- Buttons -->
   <a href="#" class="button btn-tiktok">Purchase TikTok Coin</a>
-  <a href="#" class="button btn-btc-site">Purchase BTC to Site</a>
-  <a href="#" class="button btn-btc-getpaid">Purchase BTC & Get Paid in #</a>
+  <a href="#" class="button btn-bitcoin">Purchase Bitcoins</a>
 
 </body>
 </html>
