--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
     object-fit: contain;
   }
 
-  /* Positions */
+  /* Adjusted positions */
   .logo-left-top {
     top: 10%;
-    left: 18%;
+    left: 20%; /* shifted slightly to the right */
   }
 
   .logo-right-top {
     top: 10%;
-    right: 18%;
+    right: 16%; /* shifted slightly to the left */
   }
 
   .logo-bottom-left {
@@ -111,8 +111,8 @@
 
     .logo-box { width: 70px; height: 70px; }
 
-    .logo-left-top { top: 12%; left: 10%; }
-    .logo-right-top { top: 12%; right: 10%; }
+    .logo-left-top { top: 12%; left: 12%; }
+    .logo-right-top { top: 12%; right: 12%; }
     .logo-bottom-left { bottom: 15%; left: 10%; }
 
     .button {
