--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
   /* Adjusted positions */
   .logo-left-top {
     top: 10%;
-    left: 20%; /* shifted slightly to the right */
+    left: 22%; /* shifted slightly more to the right */
   }
 
   .logo-right-top {
     top: 10%;
-    right: 16%; /* shifted slightly to the left */
+    right: 14%; /* shifted slightly more to the left */
   }
 
   .logo-bottom-left {
@@ -96,7 +96,7 @@
   /* Button positions */
   .btn-tiktok {
     top: 25%;
-    left: 15%;
+    left: 13%; /* shifted slightly to the left */
   }
 
   .btn-bitcoin {
@@ -111,7 +111,7 @@
 
     .logo-box { width: 70px; height: 70px; }
 
-    .logo-left-top { top: 12%; left: 12%; }
+    .logo-left-top { top: 12%; left: 14%; }
     .logo-right-top { top: 12%; right: 12%; }
     .logo-bottom-left { bottom: 15%; left: 10%; }
 
