--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
   /* Adjusted positions */
   .logo-left-top {
     top: 10%;
-    left: 22%; /* shifted slightly more to the right */
+    left: 24%; /* moved slightly more to the right */
   }
 
   .logo-right-top {
     top: 10%;
-    right: 14%; /* shifted slightly more to the left */
+    right: 12%; /* moved slightly more to the left */
   }
 
   .logo-bottom-left {
@@ -96,7 +96,7 @@
   /* Button positions */
   .btn-tiktok {
     top: 25%;
-    left: 13%; /* shifted slightly to the left */
+    left: 11%; /* shifted a bit further to the left */
   }
 
   .btn-bitcoin {
