--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
   /* Perfectly centered top logos */
   .logo-left-top {
     top: 10%;
-    left: calc(25% - 50px); /* centered in the left half */
+    left: calc(25% - 50px);
   }
 
   .logo-right-top {
     top: 10%;
-    right: calc(25% - 50px); /* centered in the right half */
+    right: calc(25% - 50px);
   }
 
   .logo-bottom-left {
@@ -93,10 +93,10 @@
     transform: translateY(-2px);
   }
 
-  /* Perfectly centered under each logo */
+  /* Button positions */
   .btn-tiktok {
-    top: calc(10% + 120px);
-    left: calc(25% - 75px);
+    top: calc(10% + 130px); /* moved slightly down */
+    left: calc(25% - 85px); /* moved slightly to the left */
   }
 
   .btn-bitcoin {
@@ -128,8 +128,8 @@
     }
 
     .btn-tiktok {
-      top: calc(12% + 90px);
-      left: calc(25% - 55px);
+      top: calc(12% + 100px); /* also lowered slightly */
+      left: calc(25% - 65px); /* also nudged left */
     }
 
     .btn-bitcoin {
