--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
 
   /* Button positions */
   .btn-tiktok {
-    top: calc(10% + 130px); /* moved slightly down */
-    left: calc(25% - 85px); /* moved slightly to the left */
+    top: calc(10% + 130px);
+    left: calc(25% - 95px); /* shifted slightly more left for perfect centering */
   }
 
   .btn-bitcoin {
@@ -128,8 +128,8 @@
     }
 
     .btn-tiktok {
-      top: calc(12% + 100px); /* also lowered slightly */
-      left: calc(25% - 65px); /* also nudged left */
+      top: calc(12% + 100px);
+      left: calc(25% - 75px); /* nudged left for perfect mobile alignment */
     }
 
     .btn-bitcoin {
