--- a/index.html
+++ b/index.html
@@ -93,15 +93,15 @@
     transform: translateY(-2px);
   }
 
-  /* Button positions */
+  /* Button positions (now perfectly centered under logos) */
   .btn-tiktok {
     top: calc(10% + 130px);
-    left: calc(25% - 95px); /* shifted slightly more left for perfect centering */
+    left: calc(25% - 95px);
   }
 
   .btn-bitcoin {
-    top: calc(10% + 120px);
-    right: calc(25% - 75px);
+    top: calc(10% + 130px); /* same height as TikTok button */
+    right: calc(25% - 95px); /* shifted slightly more left for perfect centering */
   }
 
   /* Responsive adjustments */
@@ -129,12 +129,12 @@
 
     .btn-tiktok {
       top: calc(12% + 100px);
-      left: calc(25% - 75px); /* nudged left for perfect mobile alignment */
+      left: calc(25% - 75px);
     }
 
     .btn-bitcoin {
-      top: calc(12% + 90px);
-      right: calc(25% - 55px);
+      top: calc(12% + 100px);
+      right: calc(25% - 75px);
     }
   }
 </style>
