--- a/index.html
+++ b/index.html
@@ -71,6 +71,17 @@
     left: 18%;
   }
 
+  /* NEW lower logo boxes under each button */
+  .logo-under-tiktok {
+    top: calc(10% + 220px);
+    left: calc(25% - 50px);
+  }
+
+  .logo-under-bitcoin {
+    top: calc(10% + 220px);
+    right: calc(25% - 50px);
+  }
+
   /* Buttons */
   .button {
     position: fixed;
@@ -93,15 +104,15 @@
     transform: translateY(-2px);
   }
 
-  /* Button positions (now perfectly centered under logos) */
+  /* Button positions */
   .btn-tiktok {
     top: calc(10% + 130px);
     left: calc(25% - 95px);
   }
 
   .btn-bitcoin {
-    top: calc(10% + 130px); /* same height as TikTok button */
-    right: calc(25% - 95px); /* shifted slightly more left for perfect centering */
+    top: calc(10% + 130px);
+    right: calc(25% - 95px);
   }
 
   /* Responsive adjustments */
@@ -136,6 +147,16 @@
       top: calc(12% + 100px);
       right: calc(25% - 75px);
     }
+
+    .logo-under-tiktok {
+      top: calc(12% + 180px);
+      left: calc(25% - 35px);
+    }
+
+    .logo-under-bitcoin {
+      top: calc(12% + 180px);
+      right: calc(25% - 35px);
+    }
   }
 </style>
 </head>
@@ -158,8 +179,17 @@
     <img src="logo3.png" alt="LegalTenderPay Bottom Left Logo">
   </div>
 
+  <!-- NEW logo boxes under each button -->
+  <div class="logo-box logo-under-tiktok">
+    <img src="logo4.png" alt="TikTok Lower Logo">
+  </div>
+
+  <div class="logo-box logo-under-bitcoin">
+    <img src="logo5.png" alt="Bitcoin Lower Logo">
+  </div>
+
   <!-- Buttons -->
-  <a href="#" class="button btn-tiktok">Purchase TikTok Coin</a>
+  <a href="#" class="button btn-tiktok">Purchase TikTok Coins</a>
   <a href="#" class="button btn-bitcoin">Purchase Bitcoins</a>
 
 </body>
