--- a/index.html
+++ b/index.html
@@ -68,24 +68,25 @@
     height: 100px;
   }
 
+  /* Bigger bottom-left logo */
   .logo-bottom-left {
     bottom: 10%;
     left: 18%;
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
   }
 
   /* Enlarged lower logos */
   .logo-under-tiktok {
     top: calc(10% + 220px);
-    left: calc(25% - 65px); /* perfectly centered below TikTok button */
+    left: calc(25% - 65px);
     width: 130px;
     height: 130px;
   }
 
   .logo-under-bitcoin {
     top: calc(10% + 220px);
-    right: calc(25% - 65px); /* perfectly centered below Bitcoin button */
+    right: calc(25% - 65px);
     width: 130px;
     height: 130px;
   }
@@ -112,15 +113,21 @@
     transform: translateY(-2px);
   }
 
-  /* Button positions (tweaked for perfect balance) */
+  /* Button positions */
   .btn-tiktok {
     top: calc(10% + 130px);
-    left: calc(25% - 105px); /* shifted slightly more left for perfect centering */
+    left: calc(25% - 105px);
   }
 
   .btn-bitcoin {
     top: calc(10% + 130px);
     right: calc(25% - 95px);
+  }
+
+  /* New CardTenderPay button near bottom-left logo */
+  .btn-cardpay {
+    bottom: 17%;
+    left: calc(18% + 180px); /* placed to the right of bottom-left logo */
   }
 
   /* Responsive adjustments */
@@ -131,14 +138,16 @@
     .logo-box { border-width: 2px; }
 
     .logo-left-top,
-    .logo-right-top,
-    .logo-bottom-left {
+    .logo-right-top {
       width: 70px;
       height: 70px;
     }
 
-    .logo-left-top { top: 12%; left: calc(25% - 35px); }
-    .logo-right-top { top: 12%; right: calc(25% - 35px); }
+    .logo-bottom-left {
+      width: 110px;
+      height: 110px;
+      left: 10%;
+    }
 
     .button {
       font-size: 0.8rem;
@@ -168,6 +177,11 @@
       right: calc(25% - 45px);
       width: 100px;
       height: 100px;
+    }
+
+    .btn-cardpay {
+      bottom: 18%;
+      left: calc(10% + 130px);
     }
   }
 </style>
@@ -203,6 +217,7 @@
   <!-- Buttons -->
   <a href="#" class="button btn-tiktok">Purchase TikTok Coins</a>
   <a href="#" class="button btn-bitcoin">Purchase Bitcoins</a>
+  <a href="#" class="button btn-cardpay">CardTenderPay</a>
 
 </body>
 </html>
