--- a/index.html
+++ b/index.html
@@ -1,228 +1,30 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>LegalTenderPay</title>
-<style>
-  * { box-sizing: border-box; margin: 0; padding: 0; }
-  html, body { height: 100%; background: #fff; font-family: system-ui; }
-
-  :root {
-    --metallic-silver: #9ea0a3;
-    --red: #ff0000;
-  }
-
-  /* Divider lines */
-  .divider-horizontal {
-    position: fixed;
-    left: 0;
-    right: 0;
-    top: 65%;
-    height: 10px;
-    background: linear-gradient(90deg, #c0c1c3, #9ea0a3, #c0c1c3);
-    transform: translateY(-50%);
-    z-index: 2;
-  }
-
-  .divider-vertical {
-    position: fixed;
-    left: 50%;
-    top: 0;
-    bottom: 35%;
-    width: 10px;
-    background: linear-gradient(180deg, #c0c1c3, #9ea0a3, #c0c1c3);
-    transform: translateX(-50%);
-    z-index: 2;
-  }
-
-  /* Logo boxes */
-  .logo-box {
-    position: fixed;
-    border-radius: 12px;
-    overflow: hidden;
-    z-index: 5;
-    background: #f3f3f3;
-    border: 3px solid var(--metallic-silver);
-    box-shadow: 0 4px 10px rgba(0,0,0,0.08);
-  }
-
-  .logo-box img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-  }
-
-  /* Top logos */
-  .logo-left-top {
-    top: 10%;
-    left: calc(25% - 50px);
-    width: 100px;
-    height: 100px;
-  }
-
-  .logo-right-top {
-    top: 10%;
-    right: calc(25% - 50px);
-    width: 100px;
-    height: 100px;
-  }
-
-  /* Bigger bottom-left logo */
-  .logo-bottom-left {
-    bottom: 10%;
-    left: 18%;
-    width: 150px;
-    height: 150px;
-  }
-
-  /* Enlarged lower logos */
-  .logo-under-tiktok {
-    top: calc(10% + 220px);
-    left: calc(25% - 65px);
-    width: 130px;
-    height: 130px;
-  }
-
-  .logo-under-bitcoin {
-    top: calc(10% + 220px);
-    right: calc(25% - 65px);
-    width: 130px;
-    height: 130px;
-  }
-
-  /* Buttons */
-  .button {
-    position: fixed;
-    background: linear-gradient(180deg, #ff3333, #cc0000);
-    color: #fff;
-    border: 2px solid var(--metallic-silver);
-    border-radius: 10px;
-    padding: 12px 28px;
-    font-size: 1.05rem;
-    font-weight: 600;
-    cursor: pointer;
-    text-decoration: none;
-    transition: all 0.3s ease;
-    box-shadow: 0 4px 15px rgba(255, 0, 0, 0.25), 0 0 8px rgba(158,160,163,0.4);
-  }
-
-  .button:hover {
-    background: linear-gradient(180deg, #ff5555, #bb0000);
-    box-shadow: 0 6px 18px rgba(255,0,0,0.35), 0 0 10px rgba(158,160,163,0.6);
-    transform: translateY(-2px);
-  }
-
-  /* Button positions */
-  .btn-tiktok {
-    top: calc(10% + 130px);
-    left: calc(25% - 105px);
-  }
-
-  .btn-bitcoin {
-    top: calc(10% + 130px);
-    right: calc(25% - 95px);
-  }
-
-  /* New CardTenderPay button (shifted down + right + enlarged) */
-  .btn-cardpay {
-    bottom: 13%; /* slightly lower */
-    left: calc(18% + 220px); /* shifted right */
-    padding: 14px 36px; /* bigger button */
-    font-size: 1.1rem;
-    border-radius: 12px;
-  }
-
-  /* Responsive adjustments */
-  @media (max-width: 420px) {
-    .divider-horizontal { height: 6px; }
-    .divider-vertical { width: 6px; }
-
-    .logo-box { border-width: 2px; }
-
-    .logo-left-top,
-    .logo-right-top {
-      width: 70px;
-      height: 70px;
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Rewards Submission Form</title>
+  <style>
+    body, html {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: #f9f9f9;
     }
-
-    .logo-bottom-left {
-      width: 110px;
-      height: 110px;
-      left: 10%;
+    iframe {
+      width: 100%;
+      max-width: 600px;
+      height: 100vh; /* Fill full height of the screen */
+      border: none;
     }
-
-    .button {
-      font-size: 0.8rem;
-      padding: 8px 14px;
-      border-radius: 8px;
-    }
-
-    .btn-tiktok {
-      top: calc(12% + 100px);
-      left: calc(25% - 85px);
-    }
-
-    .btn-bitcoin {
-      top: calc(12% + 100px);
-      right: calc(25% - 75px);
-    }
-
-    .logo-under-tiktok {
-      top: calc(12% + 180px);
-      left: calc(25% - 45px);
-      width: 100px;
-      height: 100px;
-    }
-
-    .logo-under-bitcoin {
-      top: calc(12% + 180px);
-      right: calc(25% - 45px);
-      width: 100px;
-      height: 100px;
-    }
-
-    .btn-cardpay {
-      bottom: 14%;
-      left: calc(10% + 160px);
-      padding: 10px 20px;
-      font-size: 0.9rem;
-    }
-  }
-</style>
+  </style>
 </head>
 <body>
-
-  <!-- Silver Metallic T Divider -->
-  <div class="divider-horizontal"></div>
-  <div class="divider-vertical"></div>
-
-  <!-- Logo Boxes -->
-  <div class="logo-box logo-left-top">
-    <img src="logo1.png" alt="LegalTenderPay Left Logo">
-  </div>
-
-  <div class="logo-box logo-right-top">
-    <img src="logo2.png" alt="LegalTenderPay Right Logo">
-  </div>
-
-  <div class="logo-box logo-bottom-left">
-    <img src="logo3.png" alt="LegalTenderPay Bottom Left Logo">
-  </div>
-
-  <!-- Larger logo boxes under buttons -->
-  <div class="logo-box logo-under-tiktok">
-    <img src="logo4.png" alt="TikTok Lower Logo">
-  </div>
-
-  <div class="logo-box logo-under-bitcoin">
-    <img src="logo5.png" alt="Bitcoin Lower Logo">
-  </div>
-
-  <!-- Buttons -->
-  <a href="#" class="button btn-tiktok">Purchase TikTok Coins</a>
-  <a href="#" class="button btn-bitcoin">Purchase Bitcoins</a>
-  <a href="#" class="button btn-cardpay">CardTenderPay</a>
-
+  <!-- Typeform embed -->
+  <iframe src="https://form.typeform.com/to/MwyQbxUj" title="Typeform Rewards Form"></iframe>
 </body>
 </html>
